[FIX] prevent overflow scroll view

--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -11,7 +11,7 @@ html,body{
     position: relative;
     background-color: white;
     font: 10px 'KB';
-    overflow: scroll;
+    overflow: hidden;
     display:flex;
     flex-direction: column;
 }
